<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".presentation.Login">

    <LinearLayout
        android:id="@+id/linLay1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/betMatesLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/BetMates"
            android:textColor="@color/white"
            android:textSize="56sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay1"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="290dp"
        android:layout_height="56dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="@id/userNameText"
        tools:targetApi="o" />

    <LinearLayout
        android:id="@+id/linLay2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText">

        <Button
            android:id="@+id/signUpButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="signUp"
            android:paddingRight="50dp"
            android:text="@string/click_here_to_sign_up"
            android:textColor="@color/white"
            android:paddingEnd="50dp" />

        <Button
            android:id="@+id/loginButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="loginButtonClick"
            android:text="@string/login"
            android:textColor="@color/white" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
