...
            android:textColor="#FFFFFF"
            android:textSize="46sp"
            app:fontFamily="sans-serif-light"
            tools:text="BetMates" />

        <Button
            android:id="@+id/createBetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:onClick="createBet"
            android:text="@string/create_bet"
            android:textColor="#FFF"
...
