...
    <string name="app_name">BetMates</string>
    <string name="welcome_to_betmates">Welcome to BetMates</string>
    <string name="BetMates">BetMates</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="history_of_placed_bets">History Of Placed Bets</string>
    <string name="current_bets">Current Bets</string>
    <string name="bet_history">Bet History</string>
    <string name="history_of_bets">History of Bets</string>
    <string name="title_activity_current_bets">CurrentBets</string>
    <string name="your_current_bets">Your Current Bets</string>
    <string name="action_settings">action_settings</string>
    <string name="kaitlyn_horner">Kaitlyn Horner</string>
...
