...
                android:layout_height="175dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_person_white_24dp"
                android:contentDescription="profilepic" />

            <TextView
                android:id="@+id/UserName"
                app:fontFamily="sans-serif-light"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
...
        android:paddingLeft="2dp"
        android:paddingTop="2dp"
        android:paddingRight="2dp"
        android:paddingBottom="2dp">

        <Button
            android:id="@+id/editProfileText"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="editProfile"
            android:text="Edit Profile"
...
